--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -117,6 +117,7 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.199.75.111;
+allow 118.163.74.160;
 allow 121.78.28.175;
 allow 123.253.35.32;
 allow 125.212.241.131;
@@ -172,6 +173,7 @@ allow 163.172.45.102;
 allow 163.5.143.76;
 allow 164.132.172.209;
 allow 165.73.242.163;
+allow 166.70.207.2;
 allow 167.99.208.41;
 allow 168.100.8.44;
 allow 171.25.193.20;
@@ -269,6 +271,7 @@ allow 185.130.47.58;
 allow 185.141.147.128;
 allow 185.142.239.49;
 allow 185.146.232.234;
+allow 185.146.232.243;
 allow 185.14.97.37;
 allow 185.153.197.227;
 allow 185.154.110.142;
@@ -529,7 +532,6 @@ allow 185.246.128.161;
 allow 185.246.188.149;
 allow 185.246.188.67;
 allow 185.246.188.73;
-allow 185.246.188.74;
 allow 185.246.189.99;
 allow 185.246.86.197;
 allow 185.247.184.105;
@@ -628,6 +630,7 @@ allow 192.42.116.23;
 allow 192.42.116.24;
 allow 192.42.116.25;
 allow 192.42.116.26;
+allow 192.42.116.27;
 allow 192.42.116.28;
 allow 192.46.227.185;
 allow 192.99.168.180;
@@ -908,6 +911,7 @@ allow 2001:67c:6ec:203:218:33ff:fe44:5523;
 allow 2001:67c:6ec:203:218:33ff:fe44:5524;
 allow 2001:67c:6ec:203:218:33ff:fe44:5525;
 allow 2001:67c:6ec:203:218:33ff:fe44:5526;
+allow 2001:67c:6ec:203:218:33ff:fe44:5527;
 allow 2001:67c:6ec:203:218:33ff:fe44:5528;
 allow 2001:67c:89c:702:1ce:1ce:babe:1;
 allow 2001:67c:89c:702:1ce:1ce:babe:10;
@@ -922,6 +926,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
 allow 2001:9b1:c300:3044::610;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
 allow 2001:bf0:666::666;
@@ -934,7 +939,6 @@ allow 202.61.252.121;
 allow 202.69.76.36;
 allow 202.94.246.210;
 allow 204.137.14.104;
-allow 204.137.14.105;
 allow 204.137.14.106;
 allow 204.137.14.92;
 allow 204.194.29.4;
@@ -1401,9 +1405,9 @@ allow 2a06:1700:0:15::2;
 allow 2a06:1700:0:15::3;
 allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
+allow 2a06:1700:0:16b::11;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:50::11;
-allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
 allow 2a06:d380:0:103::62;
@@ -1411,7 +1415,6 @@ allow 2a06:d380:0:103::63;
 allow 2a06:e80:3000:1:bad:babe:ca11:911;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
-allow 2a0a:3840:8078:23:0:504e:17e2:1337;
 allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 allow 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 allow 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
@@ -1650,6 +1653,7 @@ allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.134;
+allow 3.209.108.68;
 allow 35.0.127.52;
 allow 35.240.241.135;
 allow 3.67.194.114;
@@ -1666,7 +1670,6 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.254.131;
 allow 38.97.116.244;
-allow 44.210.9.125;
 allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.132.246.245;
@@ -1770,6 +1773,7 @@ allow 5.196.73.12;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.190;
@@ -1815,7 +1819,6 @@ allow 66.146.193.33;
 allow 66.220.242.222;
 allow 67.219.109.141;
 allow 71.19.144.106;
-allow 71.8.74.184;
 allow 72.14.179.10;
 allow 74.207.248.172;
 allow 74.82.47.194;
@@ -1841,7 +1844,6 @@ allow 80.210.78.252;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
-allow 80.78.23.226;
 allow 80.82.78.14;
 allow 81.16.33.42;
 allow 81.17.28.95;
@@ -1907,6 +1909,7 @@ allow 91.139.160.150;
 allow 91.203.144.194;
 allow 91.203.145.116;
 allow 91.206.26.26;
+allow 91.208.197.144;
 allow 91.208.75.153;
 allow 91.208.75.156;
 allow 91.208.75.178;
@@ -1923,6 +1926,7 @@ allow 92.119.126.161;
 allow 92.205.129.119;
 allow 92.243.24.163;
 allow 92.246.84.133;
+allow 92.249.48.135;
 allow 93.123.12.112;
 allow 93.90.74.31;
 allow 93.95.225.141;
