--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -131,6 +131,7 @@ deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2602:2e5::104;
 deny 2602:2e6:0:6::;
+deny 2602:f9f3:0:2::14;
 deny 2602:fc24:11:26c3::1;
 deny 2602:fc24:11:66c4::1;
 deny 2602:fc24:11:aabe::1;
@@ -245,7 +246,6 @@ deny 2607:5300:61:785:1:2:3:4;
 deny 2607:f530:8002::19;
 deny 2620:59:a000:9666:216:3eff:fe7d:dae8;
 deny 2620:7:6001::101;
-deny 2620:7:6001::102;
 deny 2620:7:6001::103;
 deny 2620:7:6001::104;
 deny 2620:7:6001::105;
@@ -476,6 +476,7 @@ deny 2a05:b0c7:67b0::1;
 deny 2a05:b0c7:67bb::1;
 deny 2a05:b0c7:67c6::1;
 deny 2a05:b0c7:6841::1;
+deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:696c::1;
 deny 2a05:b0c7:6978::1;
 deny 2a05:b0c7:6b6c::1;
@@ -493,7 +494,6 @@ deny 2a06:1700:0:15::2;
 deny 2a06:1700:0:15::3;
 deny 2a06:1700:0:15::4;
 deny 2a06:1700:0:16::1;
-deny 2a06:1700:0:16b::11;
 deny 2a06:1700:0:3c::1;
 deny 2a06:1700:0:50::11;
 deny 2a06:1700:3:19::1;
