--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -17,7 +17,6 @@ set_real_ip_from 104.167.242.116;
 set_real_ip_from 104.167.242.117;
 set_real_ip_from 104.167.242.118;
 set_real_ip_from 104.192.1.138;
-set_real_ip_from 104.192.171.138;
 set_real_ip_from 104.192.3.74;
 set_real_ip_from 104.219.232.126;
 set_real_ip_from 104.219.236.100;
@@ -121,6 +120,7 @@ set_real_ip_from 121.78.28.175;
 set_real_ip_from 123.253.35.32;
 set_real_ip_from 125.212.241.131;
 set_real_ip_from 128.31.0.13;
+set_real_ip_from 130.193.15.186;
 set_real_ip_from 135.125.205.25;
 set_real_ip_from 136.244.111.163;
 set_real_ip_from 137.63.71.51;
@@ -166,7 +166,6 @@ set_real_ip_from 162.247.74.27;
 set_real_ip_from 162.247.74.7;
 set_real_ip_from 162.247.74.74;
 set_real_ip_from 162.251.5.152;
-set_real_ip_from 163.172.213.212;
 set_real_ip_from 163.172.45.102;
 set_real_ip_from 163.5.143.76;
 set_real_ip_from 164.132.172.209;
@@ -268,7 +267,6 @@ set_real_ip_from 185.130.47.58;
 set_real_ip_from 185.141.147.128;
 set_real_ip_from 185.142.239.49;
 set_real_ip_from 185.146.232.234;
-set_real_ip_from 185.146.232.243;
 set_real_ip_from 185.14.97.37;
 set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
@@ -703,7 +701,6 @@ set_real_ip_from 199.195.253.180;
 set_real_ip_from 199.195.253.247;
 set_real_ip_from 199.249.230.100;
 set_real_ip_from 199.249.230.101;
-set_real_ip_from 199.249.230.102;
 set_real_ip_from 199.249.230.103;
 set_real_ip_from 199.249.230.104;
 set_real_ip_from 199.249.230.105;
@@ -1014,6 +1011,7 @@ set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.6;
 set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.236.122.62;
+set_real_ip_from 23.26.133.239;
 set_real_ip_from 23.94.211.25;
 set_real_ip_from 23.94.36.142;
 set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
@@ -1036,6 +1034,7 @@ set_real_ip_from 2600:3c03::f03c:91ff:fe24:47be;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
 set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:6::;
+set_real_ip_from 2602:f9f3:0:2::14;
 set_real_ip_from 2602:fc24:11:26c3::1;
 set_real_ip_from 2602:fc24:11:66c4::1;
 set_real_ip_from 2602:fc24:11:aabe::1;
@@ -1150,7 +1149,6 @@ set_real_ip_from 2607:5300:61:785:1:2:3:4;
 set_real_ip_from 2607:f530:8002::19;
 set_real_ip_from 2620:59:a000:9666:216:3eff:fe7d:dae8;
 set_real_ip_from 2620:7:6001::101;
-set_real_ip_from 2620:7:6001::102;
 set_real_ip_from 2620:7:6001::103;
 set_real_ip_from 2620:7:6001::104;
 set_real_ip_from 2620:7:6001::105;
@@ -1382,6 +1380,7 @@ set_real_ip_from 2a05:b0c7:67b0::1;
 set_real_ip_from 2a05:b0c7:67bb::1;
 set_real_ip_from 2a05:b0c7:67c6::1;
 set_real_ip_from 2a05:b0c7:6841::1;
+set_real_ip_from 2a05:b0c7:6949::1;
 set_real_ip_from 2a05:b0c7:696c::1;
 set_real_ip_from 2a05:b0c7:6978::1;
 set_real_ip_from 2a05:b0c7:6b6c::1;
@@ -1399,7 +1398,6 @@ set_real_ip_from 2a06:1700:0:15::2;
 set_real_ip_from 2a06:1700:0:15::3;
 set_real_ip_from 2a06:1700:0:15::4;
 set_real_ip_from 2a06:1700:0:16::1;
-set_real_ip_from 2a06:1700:0:16b::11;
 set_real_ip_from 2a06:1700:0:3c::1;
 set_real_ip_from 2a06:1700:0:50::11;
 set_real_ip_from 2a06:1700:3:19::1;
@@ -1649,7 +1647,7 @@ set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
 set_real_ip_from 31.42.185.134;
-set_real_ip_from 3.214.10.135;
+set_real_ip_from 34.206.244.25;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 35.240.241.135;
 set_real_ip_from 3.67.194.114;
@@ -1705,6 +1703,7 @@ set_real_ip_from 45.151.167.13;
 set_real_ip_from 45.15.157.177;
 set_real_ip_from 45.15.158.165;
 set_real_ip_from 45.15.158.39;
+set_real_ip_from 45.156.26.111;
 set_real_ip_from 45.61.137.5;
 set_real_ip_from 45.61.184.47;
 set_real_ip_from 45.61.185.172;
@@ -1814,6 +1813,7 @@ set_real_ip_from 67.219.109.141;
 set_real_ip_from 71.19.144.106;
 set_real_ip_from 72.14.179.10;
 set_real_ip_from 72.167.47.69;
+set_real_ip_from 72.211.49.235;
 set_real_ip_from 74.207.248.172;
 set_real_ip_from 74.82.47.194;
 set_real_ip_from 77.105.146.42;
@@ -1861,6 +1861,7 @@ set_real_ip_from 84.38.134.224;
 set_real_ip_from 84.38.134.225;
 set_real_ip_from 84.38.134.226;
 set_real_ip_from 84.38.134.227;
+set_real_ip_from 84.54.51.61;
 set_real_ip_from 84.54.51.68;
 set_real_ip_from 84.54.51.69;
 set_real_ip_from 85.17.9.83;
@@ -1888,6 +1889,7 @@ set_real_ip_from 89.147.110.214;
 set_real_ip_from 89.147.111.124;
 set_real_ip_from 89.147.111.87;
 set_real_ip_from 89.185.85.140;
+set_real_ip_from 89.208.106.13;
 set_real_ip_from 89.234.157.254;
 set_real_ip_from 89.236.112.100;
 set_real_ip_from 89.58.18.210;
@@ -1918,6 +1920,7 @@ set_real_ip_from 92.119.126.161;
 set_real_ip_from 92.205.129.119;
 set_real_ip_from 92.243.24.163;
 set_real_ip_from 92.246.84.133;
+set_real_ip_from 92.249.48.135;
 set_real_ip_from 93.123.12.112;
 set_real_ip_from 93.90.74.31;
 set_real_ip_from 93.95.225.141;
