--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,6 +6,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -17,6 +18,7 @@ allow 104.167.242.116;
 allow 104.167.242.117;
 allow 104.167.242.118;
 allow 104.192.1.138;
+allow 104.192.171.138;
 allow 104.192.3.74;
 allow 104.219.232.126;
 allow 104.219.236.100;
@@ -267,6 +269,7 @@ allow 185.130.47.58;
 allow 185.141.147.128;
 allow 185.142.239.49;
 allow 185.146.232.234;
+allow 185.146.232.243;
 allow 185.14.97.37;
 allow 185.153.197.227;
 allow 185.154.110.142;
@@ -547,6 +550,7 @@ allow 185.56.171.94;
 allow 185.56.83.83;
 allow 185.67.82.114;
 allow 185.7.33.146;
+allow 185.81.115.120;
 allow 185.82.219.109;
 allow 185.84.31.254;
 allow 185.86.148.90;
@@ -701,6 +705,7 @@ allow 199.195.253.180;
 allow 199.195.253.247;
 allow 199.249.230.100;
 allow 199.249.230.101;
+allow 199.249.230.102;
 allow 199.249.230.103;
 allow 199.249.230.104;
 allow 199.249.230.105;
@@ -935,7 +940,6 @@ allow 204.137.14.105;
 allow 204.137.14.106;
 allow 204.137.14.92;
 allow 204.194.29.4;
-allow 204.8.156.142;
 allow 204.85.191.7;
 allow 204.85.191.8;
 allow 204.85.191.9;
@@ -1009,7 +1013,6 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.6;
-allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.26.133.239;
 allow 23.94.211.25;
@@ -1032,7 +1035,6 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::2;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
-allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::14;
 allow 2602:fc24:11:26c3::1;
@@ -1149,6 +1151,7 @@ allow 2607:5300:61:785:1:2:3:4;
 allow 2607:f530:8002::19;
 allow 2620:59:a000:9666:216:3eff:fe7d:dae8;
 allow 2620:7:6001::101;
+allow 2620:7:6001::102;
 allow 2620:7:6001::103;
 allow 2620:7:6001::104;
 allow 2620:7:6001::105;
@@ -1398,6 +1401,7 @@ allow 2a06:1700:0:15::2;
 allow 2a06:1700:0:15::3;
 allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
+allow 2a06:1700:0:16b::11;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
@@ -1647,7 +1651,6 @@ allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.134;
-allow 34.206.244.25;
 allow 35.0.127.52;
 allow 35.240.241.135;
 allow 3.67.194.114;
@@ -1717,7 +1720,6 @@ allow 45.79.50.161;
 allow 45.80.158.205;
 allow 45.80.158.27;
 allow 45.80.208.123;
-allow 45.8.22.207;
 allow 45.83.104.137;
 allow 45.9.148.219;
 allow 45.9.150.103;
@@ -1791,6 +1793,7 @@ allow 5.2.67.226;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 54.224.79.94;
+allow 54.227.131.75;
 allow 5.42.66.6;
 allow 5.42.80.232;
 allow 5.42.80.233;
@@ -1813,7 +1816,6 @@ allow 67.219.109.141;
 allow 71.19.144.106;
 allow 72.14.179.10;
 allow 72.167.47.69;
-allow 72.211.49.235;
 allow 74.207.248.172;
 allow 74.82.47.194;
 allow 77.105.146.42;
@@ -1844,7 +1846,6 @@ allow 81.17.28.95;
 allow 82.118.242.158;
 allow 82.118.242.36;
 allow 82.153.138.182;
-allow 82.153.138.48;
 allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
@@ -1889,7 +1890,6 @@ allow 89.147.110.214;
 allow 89.147.111.124;
 allow 89.147.111.87;
 allow 89.185.85.140;
-allow 89.208.106.13;
 allow 89.234.157.254;
 allow 89.236.112.100;
 allow 89.58.18.210;
