--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -129,7 +129,6 @@ deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c03:e000:fa::2;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
-deny 2602:2e5::104;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::14;
 deny 2602:fc24:11:26c3::1;
@@ -246,6 +245,7 @@ deny 2607:5300:61:785:1:2:3:4;
 deny 2607:f530:8002::19;
 deny 2620:59:a000:9666:216:3eff:fe7d:dae8;
 deny 2620:7:6001::101;
+deny 2620:7:6001::102;
 deny 2620:7:6001::103;
 deny 2620:7:6001::104;
 deny 2620:7:6001::105;
@@ -494,6 +494,7 @@ deny 2a06:1700:0:15::2;
 deny 2a06:1700:0:15::3;
 deny 2a06:1700:0:15::4;
 deny 2a06:1700:0:16::1;
+deny 2a06:1700:0:16b::11;
 deny 2a06:1700:0:3c::1;
 deny 2a06:1700:0:50::11;
 deny 2a06:1700:3:19::1;
