--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -124,9 +124,9 @@ deny 2001:bf0:666::666;
 deny 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 deny 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 deny 2402:1f00:8100:400::9;
-deny 2600:3c00:e000:4ee::3;
+deny 2600:3c00:e000:4ee::2;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
-deny 2600:3c03:e000:fa::2;
+deny 2600:3c03:e000:fa::3;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2602:2e6:0:6::;
@@ -462,7 +462,6 @@ deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:4b9e::1;
 deny 2a04:52c0:108:a34f::1;
-deny 2a04:52c0:116:e0e3::1;
 deny 2a04:52c0:120:a13d::1;
 deny 2a04:52c0:130:896e::1;
 deny 2a04:52c0:130:d285::1;
@@ -729,6 +728,7 @@ deny 2a12:1e01::2;
 deny 2a12:3e80:2:29::;
 deny 2a12:5940:13e2::2;
 deny 2a12:5940:144f::2;
+deny 2a12:5940:1733::2;
 deny 2a12:5940:52c2::2;
 deny 2a12:5940:9101::2;
 deny 2a12:5940:b4db::2;
