--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -6,6 +6,7 @@ set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
 set_real_ip_from 103.172.134.26;
+set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.208.86.5;
@@ -153,6 +154,7 @@ set_real_ip_from 151.80.148.159;
 set_real_ip_from 152.89.233.169;
 set_real_ip_from 155.4.102.252;
 set_real_ip_from 160.119.249.240;
+set_real_ip_from 161.35.129.51;
 set_real_ip_from 162.247.72.192;
 set_real_ip_from 162.247.72.199;
 set_real_ip_from 162.247.74.200;
@@ -216,7 +218,6 @@ set_real_ip_from 178.218.144.51;
 set_real_ip_from 178.218.144.64;
 set_real_ip_from 178.218.144.96;
 set_real_ip_from 178.236.247.122;
-set_real_ip_from 178.31.20.83;
 set_real_ip_from 179.43.128.16;
 set_real_ip_from 179.43.159.194;
 set_real_ip_from 179.43.159.195;
@@ -1029,9 +1030,9 @@ set_real_ip_from 2.58.56.90;
 set_real_ip_from 2.58.95.31;
 set_real_ip_from 2.58.95.35;
 set_real_ip_from 2.58.95.38;
-set_real_ip_from 2600:3c00:e000:4ee::3;
+set_real_ip_from 2600:3c00:e000:4ee::2;
 set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
-set_real_ip_from 2600:3c03:e000:fa::2;
+set_real_ip_from 2600:3c03:e000:fa::3;
 set_real_ip_from 2600:3c03::f03c:91ff:fe24:47be;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
 set_real_ip_from 2602:2e6:0:6::;
@@ -1368,7 +1369,6 @@ set_real_ip_from 2a04:52c0:106:394::1;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:4b9e::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
-set_real_ip_from 2a04:52c0:116:e0e3::1;
 set_real_ip_from 2a04:52c0:120:a13d::1;
 set_real_ip_from 2a04:52c0:130:896e::1;
 set_real_ip_from 2a04:52c0:130:d285::1;
@@ -1635,6 +1635,7 @@ set_real_ip_from 2a12:1e01::2;
 set_real_ip_from 2a12:3e80:2:29::;
 set_real_ip_from 2a12:5940:13e2::2;
 set_real_ip_from 2a12:5940:144f::2;
+set_real_ip_from 2a12:5940:1733::2;
 set_real_ip_from 2a12:5940:52c2::2;
 set_real_ip_from 2a12:5940:9101::2;
 set_real_ip_from 2a12:5940:b4db::2;
@@ -1650,7 +1651,7 @@ set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
 set_real_ip_from 31.42.185.134;
-set_real_ip_from 3.227.41.41;
+set_real_ip_from 34.233.191.158;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 35.240.241.135;
 set_real_ip_from 3.67.194.114;
@@ -1774,7 +1775,6 @@ set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.190;
 set_real_ip_from 5.255.103.235;
-set_real_ip_from 5.255.111.64;
 set_real_ip_from 5.255.115.42;
 set_real_ip_from 5.255.115.58;
 set_real_ip_from 5.255.117.56;
@@ -1835,6 +1835,7 @@ set_real_ip_from 77.91.85.147;
 set_real_ip_from 77.91.86.95;
 set_real_ip_from 77.91.87.79;
 set_real_ip_from 78.142.18.219;
+set_real_ip_from 79.102.135.53;
 set_real_ip_from 79.124.8.241;
 set_real_ip_from 79.137.198.213;
 set_real_ip_from 80.210.78.252;
@@ -1847,7 +1848,6 @@ set_real_ip_from 81.17.28.95;
 set_real_ip_from 82.118.242.158;
 set_real_ip_from 82.118.242.36;
 set_real_ip_from 82.153.138.182;
-set_real_ip_from 82.153.138.48;
 set_real_ip_from 82.197.182.161;
 set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
@@ -1892,6 +1892,7 @@ set_real_ip_from 89.147.110.214;
 set_real_ip_from 89.147.111.124;
 set_real_ip_from 89.147.111.87;
 set_real_ip_from 89.185.85.140;
+set_real_ip_from 89.208.106.13;
 set_real_ip_from 89.234.157.254;
 set_real_ip_from 89.236.112.100;
 set_real_ip_from 89.58.18.210;
