--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -182,7 +182,6 @@ deny 2605:6400:30:ebb6:532:acc:65:31;
 deny 2605:6400:30:ed0c:b477:4972:756a:2f42;
 deny 2605:6400:30:ed65:a5f1:548c:47c3:6185;
 deny 2605:6400:30:edc3::34;
-deny 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 deny 2605:6400:30:ef95:daa6:bd3c:c413:da7e;
 deny 2605:6400:30:efb2::;
 deny 2605:6400:30:efba:dead::;
@@ -462,6 +461,7 @@ deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:4b9e::1;
 deny 2a04:52c0:108:a34f::1;
+deny 2a04:52c0:116:e0e3::1;
 deny 2a04:52c0:120:a13d::1;
 deny 2a04:52c0:130:896e::1;
 deny 2a04:52c0:130:d285::1;
